--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "proyecto-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "src/app.js",
+  "type": "module",
   "scripts": {
-    "start": "node --watch app.js"
+    "start": "node --watch src/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
-    "fs": "^0.0.1-security"
-  }
+    "express-handlebars": "^7.1.3",
+    "fs": "^0.0.1-security",
+    "socket.io": "^4.7.5",
+    "sweetalert2": "^11.12.3"
+  } 
 }
