--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
     "fs": "^0.0.1-security",
-    "socket.io": "^4.7.5",
-    "sweetalert2": "^11.12.3"
+    "socket.io": "^4.7.5"
   } 
 }
