--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
     "fs": "^0.0.1-security",
+    "mongoose": "^8.5.2",
+    "mongoose-paginate-v2": "^1.8.3",
     "socket.io": "^4.7.5"
-  } 
+  }
 }
