--- a/package.json
+++ b/package.json
@@ -11,11 +11,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
+    "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.3",
-    "fs": "^0.0.1-security",
+    "express-session": "^1.18.0",
     "mongoose": "^8.5.2",
     "mongoose-paginate-v2": "^1.8.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "session-file-store": "^1.5.0",
     "socket.io": "^4.7.5"
   }
 }
